# reem_tabletop_grasping

./: .project  .pydevproject  CMakeLists.txt  README.md  notes_dual_arm.txt  package.xml  setup.py
action/: GraspCluster.action  GraspObject.action
config/: dual_arm_manip.yaml  manip_poses.yaml  rh2_manip_poses.yaml  rh3_manip_poses.yaml
launch/: reem_simulation.launch  reem_simulation_dual_arms.launch  tabletop_grasping.launch  tabletop_grasping_dual_arms.launch
rviz/: tabletop_all.rviz  tabletop_new_all.rviz
scripts/: bend_torso.py  get_distance_between_fingers.py  grasp_object_server.py  grasped_from_joint_error_test.py  look_down.py  open_hands.py  poses_grabber.py  reem_object_manipulation_as.py  reem_object_manipulation_dual_arms_as.py  send_pick.py  send_pick_and_place.py  send_place.py  watch_detections.py
src/reem_tabletop_grasping/: cartesian_goals.py  generate_cartesian_goal.py  grasp_object_server.py  helper_functions.py  reem_tabletop_dual_arms_manipulation.py  reem_tabletop_grasping_as_impl.py  test_cartesian_path.py  visualizing_functions.py
