<?xml version="1.0"?>
<package>
  <name>reem_tabletop_grasping</name>
  <version>0.0.0</version>
  <description>The reem_tabletop_grasping package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/reem_tabletop_grasping</url> -->
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>block_grasp_generator</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_clusters</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>block_grasp_generator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>object_recognition_clusters</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
